--- a/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-rc.1.24451.1" />
+      <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.44" />
+    </ItemGroup>
+
 </Project>
